[tool.poetry]
name = "factorio-setup-cli"
version = "0.1.0"
description = ""
authors = ["miragecentury <victorien.vanroye@gmail.com>"]
readme = "README.md"
packages = [{include = "factorio", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "~0.9.0", extras = ["all"]}
pydantic = {version = "^2.3"}
pydantic-settings = {version = "^2.0.3"}
httpx = {version = "^0.25.0"}

[tool.poetry.group.test.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
pylint = "^2.17.5"
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
pytest-httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
factorio = "factorio.__main__:typer_application"

# pytest settings
[tool.pytest.ini_options]
addopts = ["--strict-markers", "--showlocals", "--tb=short", "--color=yes"]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88